fixed a layout issue for mobile in tab-1 content

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ img {
 
 .tabs .container,
 .tab-content .container {
-  max-width: 70%;
+  max-width: 90%;
   margin: 0 auto;
   overflow: hidden;
 }
